# foris-controller-haas-module

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.md  pyproject.toml  setup.cfg  setup.py
foris_controller_backends/haas/: __init__.py
foris_controller_haas_module/: __init__.py
foris_controller_modules/haas/: __init__.py
foris_controller_modules/haas/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/haas/schema/: haas.json
tests/: conftest.py  test_haas.py
tests/test_root/etc/init.d/: pass
tests/uci_configs/: haas
